--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=18.14.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.14.2",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   }
 }
