--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=18.14.2"
   },
   "scripts": {
-    "format": "prettier --write ."
+    "build": "turbo build --filter='./packages/*'",
+    "format": "turbo format --filter='./packages/*'"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.14.2",
     "prettier": "^2.8.4",
+    "turbo": "^1.8.3",
     "typescript": "^4.9.5"
   }
 }
