--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,10 +27,12 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "isomorphic-fetch": "^3.0.0",
+    "lodash": "^4.17.21",
     "nostr-tools": "^1.7.1"
   },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.36",
+    "@types/lodash": "^4.14.191",
     "vite": "^4.1.4",
     "vite-plugin-dts": "^2.0.2",
     "vitest": "^0.29.1"
