--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -3,12 +3,39 @@
   "private": true,
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "vite build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@nostr-stack/core": "workspace:*",
+    "@preact/signals-react": "^1.2.2",
+    "jotai": "^2.0.2",
+    "lodash": "^4.17.21",
+    "vitest": "^0.29.1"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/react": "^18.0.27",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^4.1.4",
+    "vite-plugin-dts": "^2.0.2"
+  }
 }
