--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@types/node": "^18.14.2",
     "prettier": "^2.8.4",
     "turbo": "^1.8.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
+    "vite-plugin-dts": "^2.0.2",
+    "vitest": "^0.29.1"
   }
 }
