--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@tailwindcss/forms": "^0.5.3",
+    "class-variance-authority": "^0.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.0-beta.60",
