--- a/playground/react/package.json
+++ b/playground/react/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nostr-stack/core": "workspace:*",
     "@nostr-stack/react": "workspace:*",
+    "@nostr-stack/ui": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
