--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "turbo build --filter='./packages/*'",
+    "dev": "turbo dev --filter='./packages/*'",
     "format": "turbo format --filter='./packages/*'"
   },
   "keywords": [],
