--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "test": "vitest",
     "build": "vite build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "dev": "vite build -w"
   },
   "keywords": [],
   "author": "",
